Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,60 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "'Thế giới ngầm' bán xe sang Toyota: Muốn có xe, phải lót tay 800 triệu đồng",
+    "content": "Bài viết phản ánh tình trạng mua xe sang Toyota Land Cruiser 300 tại Việt Nam, trong đó khách hàng phải chi thêm từ 650 đến 800 triệu đồng tiền \"lót tay\" để nhận xe sớm. Nhiều đại lý đã áp dụng \"luật ngầm\" này, khiến nhiều người tiêu dùng cảm thấy bức xúc. Luật sư cũng cảnh báo rằng việc thu tiền lót tay mà không xuất hóa đơn có thể vi phạm pháp luật và dẫn đến trốn thuế.",
+    "link": "https://tuoitre.vn/the-gioi-ngam-ban-xe-sang-toyota-muon-co-xe-phai-lot-tay-800-trieu-dong-20250324083933225.htm",
+    "cat": "kinh-doanh",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao khách hàng phải chi thêm tiền lót tay khi mua xe Toyota Land Cruiser 300?",
+    "answers": [
+      {
+        "text": "Để nhận xe sớm hơn từ đại lý.",
+        "correct": true
+      },
+      {
+        "text": "Để có thể thương lượng giá xe thấp hơn.",
+        "correct": false
+      },
+      {
+        "text": "Để được tặng kèm phụ kiện xe.",
+        "correct": false
+      },
+      {
+        "text": "Để có hóa đơn mua xe rõ ràng.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Thi công vỉa hè làm loạt cây xanh ở TP HCM bị hỏng rễ",
+    "content": "Quá trình thi công cải tạo vỉa hè tại TP HCM đã gây ảnh hưởng nghiêm trọng đến nhiều cây xanh, đặc biệt là rễ cây. Nhiều cây phượng vàng trên đường Nguyễn Thị Minh Khai đã bị đốn hạ hoặc cắt tỉa để đảm bảo an toàn. Đại diện Công ty TNHH MTV Công viên cây xanh cho biết đã ghi nhận tình trạng tổn thương rễ cây do thi công, và đã yêu cầu nhà thầu thực hiện biện pháp bảo vệ cây xanh trong quá trình cải tạo.",
+    "link": "https://vnexpress.net/thi-cong-via-he-lam-loat-cay-xanh-o-tp-hcm-bi-hong-re-4865217.html",
+    "cat": "thoi-su",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao nhiều cây xanh ở TP HCM bị đốn hạ trong quá trình thi công vỉa hè?",
+    "answers": [
+      {
+        "text": "Do thi công cải tạo vỉa hè làm hỏng rễ cây.",
+        "correct": true
+      },
+      {
+        "text": "Vì cây đã già và cần phải đốn hạ.",
+        "correct": false
+      },
+      {
+        "text": "Để làm mới vỉa hè không cần cây xanh.",
+        "correct": false
+      },
+      {
+        "text": "Để giảm bớt sự che phủ của cây xanh.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ngành đường sắt mở bán vé tàu hè 2025",
     "content": "Ngành đường sắt Việt Nam đã mở bán vé tàu cho dịp hè 2025 từ ngày 24 tháng 3, phục vụ tuyến Hà Nội - TP.HCM và các chặng ngắn hơn. Vé sẽ được áp dụng nhiều chính sách giảm giá, bao gồm giảm giá cho vé khứ hồi, vé tập thể và vé mua trước. Hành khách cần chú ý rằng giá vé sẽ tăng khi mua sát ngày đi tàu.",
     "link": "https://tuoitre.vn/nganh-duong-sat-mo-ban-ve-tau-he-2025-20250324144647157.htm",
@@ -206,6 +260,37 @@
     ]
   },
   {
+    "title": "Techcombank tiếp tục đưa nghệ thuật tinh hoa độc bản về Việt Nam",
+    "content": "Ngân hàng Techcombank đã trở thành nhà tài trợ độc quyền cho việc công diễn vở opera nổi tiếng \"Carmen\" tại Việt Nam vào ngày 24-25/4/2025. Sự kiện này đánh dấu một bước tiến quan trọng trong việc đưa những kiệt tác nghệ thuật thế giới đến gần hơn với khán giả Việt Nam, đồng thời thể hiện sự kết nối văn hóa toàn cầu. Vở diễn sẽ được phục dựng nguyên bản, với sự tham gia của nhiều nghệ sĩ hàng đầu, nhằm mang đến trải nghiệm nghệ thuật đích thực cho khán giả.",
+    "link": "https://dantri.com.vn/giai-tri/techcombank-tiep-tuc-dua-nghe-thuat-tinh-hoa-doc-ban-ve-viet-nam-20250324144222949.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Sự kiện nào sẽ được Techcombank tài trợ tại Việt Nam vào tháng 4 năm 2025?",
+    "answers": [
+      {
+        "text": "Vở Carmen",
+        "correct": true
+      },
+      {
+        "text": "Vở La Traviata",
+        "correct": false
+      },
+      {
+        "text": "Vở Don Giovanni",
+        "correct": false
+      },
+      {
+        "text": "Vở Tosca",
+        "correct": false
+      },
+      {
+        "text": "Vở Aida",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đắk Lắk kêu gọi người bị lừa vượt biên có thể tự nguyện hồi hương",
     "content": "UBND tỉnh Đắk Lắk đã kêu gọi người dân tộc thiểu số đang cư trú bất hợp pháp tại Thái Lan tự nguyện hồi hương do nhiều người bị lừa vượt biên và gặp khó khăn. Chính quyền hứa sẽ tạo điều kiện hỗ trợ về thủ tục pháp lý, việc làm và nhà ở cho những người trở về. Đến nay, đã có 42 người dân hồi hương và được hỗ trợ tái hòa nhập. Tỉnh cũng cảnh báo về bẫy 'việc nhẹ lương cao' mà nhiều người đã rơi vào.",
     "link": "https://tuoitre.vn/dak-lak-keu-goi-nguoi-bi-lua-vuot-bien-co-the-tu-nguyen-hoi-huong-20250324104542031.htm",
@@ -255,6 +340,33 @@
       },
       {
         "text": "Bằng cách giảm lãi suất cho vay cho tất cả doanh nghiệp.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Mụn lưng có thể chữa khỏi không?",
+    "content": "Mụn lưng là tình trạng phổ biến, thường gặp ở thanh thiếu niên và người trẻ, chủ yếu do lỗ chân lông bị tắc nghẽn bởi nhờn, bụi bẩn và vi khuẩn. Để cải thiện tình trạng này, cần giữ vệ sinh da sạch sẽ, sử dụng các sản phẩm điều trị như kem chứa benzoyl peroxide hoặc axit salicylic. Ngoài ra, tránh mặc quần áo chật và kiểm soát căng thẳng cũng có thể giúp giảm mụn. Nếu tình trạng nặng, nên tới bác sĩ da liễu để được điều trị kịp thời.",
+    "link": "https://vnexpress.net/mun-lung-co-the-chua-khoi-khong-4865135.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Mụn lưng có thể chữa khỏi được không?",
+    "answers": [
+      {
+        "text": "Có, mụn lưng có thể chữa khỏi nếu điều trị đúng cách.",
+        "correct": true
+      },
+      {
+        "text": "Không, mụn lưng không bao giờ khỏi.",
+        "correct": false
+      },
+      {
+        "text": "Mụn lưng chỉ có thể giảm nhưng không thể chữa khỏi.",
+        "correct": false
+      },
+      {
+        "text": "Mụn lưng chỉ tự khỏi khi không hoạt động thể chất.",
         "correct": false
       }
     ]
@@ -1933,33 +2045,6 @@
     ]
   },
   {
-    "title": "4 hiểu lầm thường gặp về đường",
-    "content": "Bài viết đề cập đến 4 hiểu lầm phổ biến về đường, bao gồm những tác hại của đường không chỉ trong bánh kẹo, nước ngọt mà còn trong nhiều sản phẩm chế biến khác. Đường tinh luyện có thể gây tăng cân, béo phì, rối loạn chuyển hóa và tăng nguy cơ bệnh tim mạch. Tuy nhiên, không phải tất cả loại đường đều xấu; đường tự nhiên trong trái cây và rau củ mang lại nhiều lợi ích cho sức khỏe. Người tiêu dùng nên thận trọng với lượng đường bổ sung và kết hợp ăn uống hợp lý.",
-    "link": "https://vnexpress.net/4-hieu-lam-thuong-gap-ve-duong-4865016.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Có những hiểu lầm nào về đường mà mọi người thường mắc phải?",
-    "answers": [
-      {
-        "text": "Đường không chỉ có hại trong bánh kẹo và nước ngọt",
-        "correct": true
-      },
-      {
-        "text": "Đường tự nhiên không gây hại cho sức khỏe",
-        "correct": false
-      },
-      {
-        "text": "Cắt bỏ hoàn toàn đường khỏi chế độ ăn là cần thiết",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ăn đường một lần trong ngày là an toàn",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Skoda Kushaq - CUV cỡ B mới nhận cọc tại đại lý",
     "content": "Skoda Kushaq, mẫu CUV cỡ B mới của Skoda, đã bắt đầu nhận cọc từ giữa tháng 3 với giá dự kiến khoảng 600 triệu đồng. Đây là mẫu xe thứ ba của Skoda tại Việt Nam, sau Kodiaq và Karoq, được lắp ráp bởi tập đoàn Thành Công. Xe có kích thước tương đồng với Mitsubishi Xforce và sẽ cạnh tranh với các đối thủ như Kia Seltos và Hyundai Creta. Dự kiến, Kushaq sẽ được chính thức giới thiệu vào tháng 6 năm 2025 và có thể giao xe vào quý II.",
     "link": "https://vnexpress.net/skoda-kushaq-cuv-co-b-moi-nhan-coc-tai-dai-ly-4864777.html",
@@ -1982,6 +2067,33 @@
       },
       {
         "text": "Giữa tháng 1",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "4 hiểu lầm thường gặp về đường",
+    "content": "Bài viết đề cập đến 4 hiểu lầm phổ biến về đường, bao gồm những tác hại của đường không chỉ trong bánh kẹo, nước ngọt mà còn trong nhiều sản phẩm chế biến khác. Đường tinh luyện có thể gây tăng cân, béo phì, rối loạn chuyển hóa và tăng nguy cơ bệnh tim mạch. Tuy nhiên, không phải tất cả loại đường đều xấu; đường tự nhiên trong trái cây và rau củ mang lại nhiều lợi ích cho sức khỏe. Người tiêu dùng nên thận trọng với lượng đường bổ sung và kết hợp ăn uống hợp lý.",
+    "link": "https://vnexpress.net/4-hieu-lam-thuong-gap-ve-duong-4865016.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Có những hiểu lầm nào về đường mà mọi người thường mắc phải?",
+    "answers": [
+      {
+        "text": "Đường không chỉ có hại trong bánh kẹo và nước ngọt",
+        "correct": true
+      },
+      {
+        "text": "Đường tự nhiên không gây hại cho sức khỏe",
+        "correct": false
+      },
+      {
+        "text": "Cắt bỏ hoàn toàn đường khỏi chế độ ăn là cần thiết",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ăn đường một lần trong ngày là an toàn",
         "correct": false
       }
     ]
@@ -2814,28 +2926,28 @@
     ]
   },
   {
-    "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
-    "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
-    "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
-    "cat": "thoi-su",
+    "title": "Những gia đình Việt tìm cách giữ tiếng mẹ đẻ cho con",
+    "content": "Bài viết tập trung vào nỗi lo của những gia đình Việt sống ở nước ngoài, đặc biệt là tại Nhật Bản, về việc giữ gìn tiếng mẹ đẻ cho con cái. Chị Tô Thị Thu chia sẻ về việc dạy tiếng Việt cho con trai mình, trong khi con đã nhanh chóng hòa nhập và giỏi tiếng Nhật. Nhiều gia đình khác cũng đối mặt với tình hình tương tự, dẫn đến việc thành lập các trường dạy tiếng Việt cho trẻ em gốc Việt ở nước ngoài. Các chuyên gia khuyến khích cha mẹ nên chủ động trong việc duy trì ngôn ngữ và văn hóa Việt Nam cho con cái để giúp trẻ hiểu và tự hào về nguồn gốc dân tộc của mình.",
+    "link": "https://vnexpress.net/nhung-gia-dinh-viet-tim-cach-giu-tieng-me-de-cho-con-4862705.html",
+    "cat": "gia-dinh",
     "positivity": 8,
     "importance": 7,
-    "question": "Các nữ chiến sĩ Biệt động Sài Gòn đang luyện tập cho sự kiện gì?",
+    "question": "Làm thế nào để các gia đình Việt ở nước ngoài giữ gìn tiếng mẹ đẻ cho con cái?",
     "answers": [
       {
-        "text": "Lễ diễu binh kỷ niệm 50 năm thống nhất đất nước",
+        "text": "Bằng cách giao tiếp bằng tiếng Việt và cho trẻ học tiếng Việt thường xuyên.",
         "correct": true
       },
       {
-        "text": "Lễ hội mùa xuân",
+        "text": "Chỉ cần để trẻ học tiếng Nhật là đủ.",
         "correct": false
       },
       {
-        "text": "Cuộc thi thể thao quốc gia",
+        "text": "Không cần dạy tiếng Việt nếu trẻ sống ở nước ngoài.",
         "correct": false
       },
       {
-        "text": "Ngày Quốc tế Phụ nữ",
+        "text": "Để trẻ tự học tiếng Việt mà không cần sự hỗ trợ của cha mẹ.",
         "correct": false
       }
     ]
@@ -2899,28 +3011,28 @@
     ]
   },
   {
-    "title": "Những gia đình Việt tìm cách giữ tiếng mẹ đẻ cho con",
-    "content": "Bài viết tập trung vào nỗi lo của những gia đình Việt sống ở nước ngoài, đặc biệt là tại Nhật Bản, về việc giữ gìn tiếng mẹ đẻ cho con cái. Chị Tô Thị Thu chia sẻ về việc dạy tiếng Việt cho con trai mình, trong khi con đã nhanh chóng hòa nhập và giỏi tiếng Nhật. Nhiều gia đình khác cũng đối mặt với tình hình tương tự, dẫn đến việc thành lập các trường dạy tiếng Việt cho trẻ em gốc Việt ở nước ngoài. Các chuyên gia khuyến khích cha mẹ nên chủ động trong việc duy trì ngôn ngữ và văn hóa Việt Nam cho con cái để giúp trẻ hiểu và tự hào về nguồn gốc dân tộc của mình.",
-    "link": "https://vnexpress.net/nhung-gia-dinh-viet-tim-cach-giu-tieng-me-de-cho-con-4862705.html",
-    "cat": "gia-dinh",
+    "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
+    "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
+    "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
+    "cat": "thoi-su",
     "positivity": 8,
     "importance": 7,
-    "question": "Làm thế nào để các gia đình Việt ở nước ngoài giữ gìn tiếng mẹ đẻ cho con cái?",
+    "question": "Các nữ chiến sĩ Biệt động Sài Gòn đang luyện tập cho sự kiện gì?",
     "answers": [
       {
-        "text": "Bằng cách giao tiếp bằng tiếng Việt và cho trẻ học tiếng Việt thường xuyên.",
+        "text": "Lễ diễu binh kỷ niệm 50 năm thống nhất đất nước",
         "correct": true
       },
       {
-        "text": "Chỉ cần để trẻ học tiếng Nhật là đủ.",
+        "text": "Lễ hội mùa xuân",
         "correct": false
       },
       {
-        "text": "Không cần dạy tiếng Việt nếu trẻ sống ở nước ngoài.",
+        "text": "Cuộc thi thể thao quốc gia",
         "correct": false
       },
       {
-        "text": "Để trẻ tự học tiếng Việt mà không cần sự hỗ trợ của cha mẹ.",
+        "text": "Ngày Quốc tế Phụ nữ",
         "correct": false
       }
     ]
