Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -175,6 +175,33 @@
     ]
   },
   {
+    "title": "Dịch tễ bệnh lao ở Việt Nam 'rất nặng nề'",
+    "content": "Dịch tễ bệnh lao ở Việt Nam đang ở mức rất nghiêm trọng, với hơn 113.000 ca bệnh lao mới được phát hiện trong năm 2024, tăng 7% so với năm trước. Việt Nam hiện đứng thứ 12 trong số 30 quốc gia có gánh nặng bệnh lao cao nhất thế giới, với khoảng 182.000 ca lao mới mỗi năm. Mặc dù tỷ lệ điều trị thành công gần 90%, nhưng chỉ có khoảng 60% số ca bệnh được phát hiện, cho thấy cần tăng cường nỗ lực trong công tác phòng chống lao để đạt được mục tiêu chấm dứt bệnh vào năm 2030.",
+    "link": "https://vnexpress.net/dich-te-benh-lao-o-viet-nam-rat-nang-ne-4865119.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 9,
+    "question": "Tình hình dịch tễ bệnh lao ở Việt Nam hiện tại như thế nào?",
+    "answers": [
+      {
+        "text": "Dịch tễ bệnh lao rất nặng nề.",
+        "correct": true
+      },
+      {
+        "text": "Bệnh lao đang được kiểm soát tốt.",
+        "correct": false
+      },
+      {
+        "text": "Số ca bệnh lao giảm đáng kể.",
+        "correct": false
+      },
+      {
+        "text": "Việt Nam không còn bệnh lao.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thi công vỉa hè làm loạt cây xanh ở TP HCM bị hỏng rễ",
     "content": "Quá trình thi công cải tạo vỉa hè tại TP HCM đã gây ảnh hưởng nghiêm trọng đến nhiều cây xanh, đặc biệt là rễ cây. Nhiều cây phượng vàng trên đường Nguyễn Thị Minh Khai đã bị đốn hạ hoặc cắt tỉa để đảm bảo an toàn. Đại diện Công ty TNHH MTV Công viên cây xanh cho biết đã ghi nhận tình trạng tổn thương rễ cây do thi công, và đã yêu cầu nhà thầu thực hiện biện pháp bảo vệ cây xanh trong quá trình cải tạo.",
     "link": "https://vnexpress.net/thi-cong-via-he-lam-loat-cay-xanh-o-tp-hcm-bi-hong-re-4865217.html",
@@ -197,6 +224,33 @@
       },
       {
         "text": "Để giảm bớt sự che phủ của cây xanh.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lợi ích khi ăn táo bỏ vỏ",
+    "content": "Ăn táo bỏ vỏ có thể mang lại nhiều lợi ích cho sức khỏe như giảm tiếp xúc với thuốc trừ sâu và chất ô nhiễm, cũng như dễ tiêu hóa hơn cho những người có vấn đề về dạ dày. Mặc dù vỏ táo chứa nhiều vitamin và chất xơ, việc gọt bỏ vỏ giúp giảm lượng đường nạp vào, phù hợp cho người kiểm soát đường huyết. Ngoài ra, việc ăn táo không vỏ có thể cải thiện trải nghiệm ăn uống nhờ vào kết cấu mịn màng.",
+    "link": "https://vnexpress.net/loi-ich-khi-an-tao-bo-vo-4865032.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Lợi ích của việc ăn táo bỏ vỏ là gì?",
+    "answers": [
+      {
+        "text": "Giảm tiếp xúc với thuốc trừ sâu và dễ tiêu hóa hơn.",
+        "correct": true
+      },
+      {
+        "text": "Tăng cường vitamin và khoáng chất.",
+        "correct": false
+      },
+      {
+        "text": "Tăng lượng đường trong máu.",
+        "correct": false
+      },
+      {
+        "text": "Cải thiện sự cứng của táo.",
         "correct": false
       }
     ]
@@ -345,33 +399,6 @@
     ]
   },
   {
-    "title": "Mụn lưng có thể chữa khỏi không?",
-    "content": "Mụn lưng là tình trạng phổ biến, thường gặp ở thanh thiếu niên và người trẻ, chủ yếu do lỗ chân lông bị tắc nghẽn bởi nhờn, bụi bẩn và vi khuẩn. Để cải thiện tình trạng này, cần giữ vệ sinh da sạch sẽ, sử dụng các sản phẩm điều trị như kem chứa benzoyl peroxide hoặc axit salicylic. Ngoài ra, tránh mặc quần áo chật và kiểm soát căng thẳng cũng có thể giúp giảm mụn. Nếu tình trạng nặng, nên tới bác sĩ da liễu để được điều trị kịp thời.",
-    "link": "https://vnexpress.net/mun-lung-co-the-chua-khoi-khong-4865135.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Mụn lưng có thể chữa khỏi được không?",
-    "answers": [
-      {
-        "text": "Có, mụn lưng có thể chữa khỏi nếu điều trị đúng cách.",
-        "correct": true
-      },
-      {
-        "text": "Không, mụn lưng không bao giờ khỏi.",
-        "correct": false
-      },
-      {
-        "text": "Mụn lưng chỉ có thể giảm nhưng không thể chữa khỏi.",
-        "correct": false
-      },
-      {
-        "text": "Mụn lưng chỉ tự khỏi khi không hoạt động thể chất.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cách duy trì khoảng cách phù hợp trên đường cao tốc",
     "content": "Bài viết trình bày về tầm quan trọng của việc duy trì khoảng cách an toàn khi lái xe trên đường cao tốc để tránh tai nạn giao thông. Tài xế cần tuân thủ quy định về khoảng cách an toàn theo tốc độ di chuyển, với khoảng cách tối thiểu từ 55 m đến 100 m tùy thuộc vào tốc độ. Ngoài ra, bài viết cũng đề cập đến việc điều chỉnh khoảng cách theo điều kiện thời tiết và sử dụng nguyên tắc 3 giây để xác định khoảng cách an toàn.",
     "link": "https://vnexpress.net/cach-duy-tri-khoang-cach-phu-hop-tren-duong-cao-toc-4864160.html",
@@ -394,6 +421,33 @@
       },
       {
         "text": "Để giảm tiếng ồn trong xe.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Mụn lưng có thể chữa khỏi không?",
+    "content": "Mụn lưng là tình trạng phổ biến, thường gặp ở thanh thiếu niên và người trẻ, chủ yếu do lỗ chân lông bị tắc nghẽn bởi nhờn, bụi bẩn và vi khuẩn. Để cải thiện tình trạng này, cần giữ vệ sinh da sạch sẽ, sử dụng các sản phẩm điều trị như kem chứa benzoyl peroxide hoặc axit salicylic. Ngoài ra, tránh mặc quần áo chật và kiểm soát căng thẳng cũng có thể giúp giảm mụn. Nếu tình trạng nặng, nên tới bác sĩ da liễu để được điều trị kịp thời.",
+    "link": "https://vnexpress.net/mun-lung-co-the-chua-khoi-khong-4865135.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Mụn lưng có thể chữa khỏi được không?",
+    "answers": [
+      {
+        "text": "Có, mụn lưng có thể chữa khỏi nếu điều trị đúng cách.",
+        "correct": true
+      },
+      {
+        "text": "Không, mụn lưng không bao giờ khỏi.",
+        "correct": false
+      },
+      {
+        "text": "Mụn lưng chỉ có thể giảm nhưng không thể chữa khỏi.",
+        "correct": false
+      },
+      {
+        "text": "Mụn lưng chỉ tự khỏi khi không hoạt động thể chất.",
         "correct": false
       }
     ]
@@ -1682,6 +1736,33 @@
     ]
   },
   {
+    "title": "Từng mắc quai bị có vô sinh không?",
+    "content": "Bệnh quai bị có thể gây ra một số biến chứng nghiêm trọng, bao gồm viêm tinh hoàn ở nam giới, đặc biệt là sau tuổi dậy thì, dẫn đến nguy cơ vô sinh. Nếu viêm tinh hoàn xảy ra ở cả hai bên, khả năng sản xuất tinh trùng sẽ suy giảm nghiêm trọng, gây ra tình trạng vô tinh. Trẻ gái cũng có thể bị viêm buồng trứng, nhưng ít khi dẫn đến vô sinh. Để phòng ngừa, việc tiêm vaccine quai bị là rất quan trọng.",
+    "link": "https://vnexpress.net/tung-mac-quai-bi-co-vo-sinh-khong-4865030.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Mắc quai bị có thể gây vô sinh không?",
+    "answers": [
+      {
+        "text": "Có, nếu viêm tinh hoàn xảy ra ở cả hai bên.",
+        "correct": true
+      },
+      {
+        "text": "Không, quai bị không ảnh hưởng đến khả năng sinh sản.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ ở trẻ gái.",
+        "correct": false
+      },
+      {
+        "text": "Không, trẻ sẽ luôn có khả năng sinh sản.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "6 món hỗ trợ cải thiện tiêu hóa",
     "content": "Bài viết giới thiệu 6 món ăn hỗ trợ cải thiện tiêu hóa, bao gồm sữa chua, rau xanh đậm, hạt chia, táo, rau thì là và đu đủ. Những thực phẩm này giàu lợi khuẩn, chất xơ và enzyme, giúp tăng cường hệ tiêu hóa, giảm tình trạng táo bón và đầy hơi. Sữa chua chứa probiotic, trong khi rau xanh và hạt chia cung cấp chất xơ cần thiết cho sự hoạt động của đường ruột. Đu đủ với enzyme papain hỗ trợ phân hủy protein, góp phần vào quá trình tiêu hóa.",
     "link": "https://vnexpress.net/6-mon-ho-tro-cai-thien-tieu-hoa-4865045.html",
@@ -1762,33 +1843,6 @@
       },
       {
         "text": "Chỉ đi bộ trên bề mặt bằng phẳng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Từng mắc quai bị có vô sinh không?",
-    "content": "Bệnh quai bị có thể gây ra một số biến chứng nghiêm trọng, bao gồm viêm tinh hoàn ở nam giới, đặc biệt là sau tuổi dậy thì, dẫn đến nguy cơ vô sinh. Nếu viêm tinh hoàn xảy ra ở cả hai bên, khả năng sản xuất tinh trùng sẽ suy giảm nghiêm trọng, gây ra tình trạng vô tinh. Trẻ gái cũng có thể bị viêm buồng trứng, nhưng ít khi dẫn đến vô sinh. Để phòng ngừa, việc tiêm vaccine quai bị là rất quan trọng.",
-    "link": "https://vnexpress.net/tung-mac-quai-bi-co-vo-sinh-khong-4865030.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Mắc quai bị có thể gây vô sinh không?",
-    "answers": [
-      {
-        "text": "Có, nếu viêm tinh hoàn xảy ra ở cả hai bên.",
-        "correct": true
-      },
-      {
-        "text": "Không, quai bị không ảnh hưởng đến khả năng sinh sản.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ ở trẻ gái.",
-        "correct": false
-      },
-      {
-        "text": "Không, trẻ sẽ luôn có khả năng sinh sản.",
         "correct": false
       }
     ]
@@ -2926,28 +2980,28 @@
     ]
   },
   {
-    "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
-    "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
-    "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
+    "title": "Những gia đình Việt tìm cách giữ tiếng mẹ đẻ cho con",
+    "content": "Bài viết tập trung vào nỗi lo của những gia đình Việt sống ở nước ngoài, đặc biệt là tại Nhật Bản, về việc giữ gìn tiếng mẹ đẻ cho con cái. Chị Tô Thị Thu chia sẻ về việc dạy tiếng Việt cho con trai mình, trong khi con đã nhanh chóng hòa nhập và giỏi tiếng Nhật. Nhiều gia đình khác cũng đối mặt với tình hình tương tự, dẫn đến việc thành lập các trường dạy tiếng Việt cho trẻ em gốc Việt ở nước ngoài. Các chuyên gia khuyến khích cha mẹ nên chủ động trong việc duy trì ngôn ngữ và văn hóa Việt Nam cho con cái để giúp trẻ hiểu và tự hào về nguồn gốc dân tộc của mình.",
+    "link": "https://vnexpress.net/nhung-gia-dinh-viet-tim-cach-giu-tieng-me-de-cho-con-4862705.html",
     "cat": "gia-dinh",
-    "positivity": 3,
+    "positivity": 8,
     "importance": 7,
-    "question": "Tình trạng sức khỏe của vợ nghệ sĩ Vũ Thanh hiện tại ra sao?",
+    "question": "Làm thế nào để các gia đình Việt ở nước ngoài giữ gìn tiếng mẹ đẻ cho con cái?",
     "answers": [
       {
-        "text": "Vợ ông đang trong tình trạng nguy kịch.",
+        "text": "Bằng cách giao tiếp bằng tiếng Việt và cho trẻ học tiếng Việt thường xuyên.",
         "correct": true
       },
       {
-        "text": "Vợ ông đã hồi phục hoàn toàn.",
+        "text": "Chỉ cần để trẻ học tiếng Nhật là đủ.",
         "correct": false
       },
       {
-        "text": "Vợ ông đang khỏe mạnh và không có vấn đề gì.",
+        "text": "Không cần dạy tiếng Việt nếu trẻ sống ở nước ngoài.",
         "correct": false
       },
       {
-        "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
+        "text": "Để trẻ tự học tiếng Việt mà không cần sự hỗ trợ của cha mẹ.",
         "correct": false
       }
     ]
@@ -2984,6 +3038,33 @@
     ]
   },
   {
+    "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
+    "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
+    "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
+    "cat": "gia-dinh",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tình trạng sức khỏe của vợ nghệ sĩ Vũ Thanh hiện tại ra sao?",
+    "answers": [
+      {
+        "text": "Vợ ông đang trong tình trạng nguy kịch.",
+        "correct": true
+      },
+      {
+        "text": "Vợ ông đã hồi phục hoàn toàn.",
+        "correct": false
+      },
+      {
+        "text": "Vợ ông đang khỏe mạnh và không có vấn đề gì.",
+        "correct": false
+      },
+      {
+        "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
     "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
     "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
@@ -3006,33 +3087,6 @@
       },
       {
         "text": "Ngày Quốc tế Phụ nữ",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Những gia đình Việt tìm cách giữ tiếng mẹ đẻ cho con",
-    "content": "Bài viết tập trung vào nỗi lo của những gia đình Việt sống ở nước ngoài, đặc biệt là tại Nhật Bản, về việc giữ gìn tiếng mẹ đẻ cho con cái. Chị Tô Thị Thu chia sẻ về việc dạy tiếng Việt cho con trai mình, trong khi con đã nhanh chóng hòa nhập và giỏi tiếng Nhật. Nhiều gia đình khác cũng đối mặt với tình hình tương tự, dẫn đến việc thành lập các trường dạy tiếng Việt cho trẻ em gốc Việt ở nước ngoài. Các chuyên gia khuyến khích cha mẹ nên chủ động trong việc duy trì ngôn ngữ và văn hóa Việt Nam cho con cái để giúp trẻ hiểu và tự hào về nguồn gốc dân tộc của mình.",
-    "link": "https://vnexpress.net/nhung-gia-dinh-viet-tim-cach-giu-tieng-me-de-cho-con-4862705.html",
-    "cat": "gia-dinh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Làm thế nào để các gia đình Việt ở nước ngoài giữ gìn tiếng mẹ đẻ cho con cái?",
-    "answers": [
-      {
-        "text": "Bằng cách giao tiếp bằng tiếng Việt và cho trẻ học tiếng Việt thường xuyên.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần để trẻ học tiếng Nhật là đủ.",
-        "correct": false
-      },
-      {
-        "text": "Không cần dạy tiếng Việt nếu trẻ sống ở nước ngoài.",
-        "correct": false
-      },
-      {
-        "text": "Để trẻ tự học tiếng Việt mà không cần sự hỗ trợ của cha mẹ.",
         "correct": false
       }
     ]
@@ -3999,33 +4053,6 @@
       },
       {
         "text": "Vì đi quá tốc độ",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Mắc zona thần kinh có cần kiêng hải sản không?",
-    "content": "Bài viết tư vấn về việc kiêng ăn hải sản cho người mắc zona thần kinh. Mặc dù hải sản chứa nhiều dinh dưỡng tốt cho sức khỏe, nhưng có thể gây kích ứng và làm vết thương lâu lành nếu người bệnh có cơ địa nhạy cảm hoặc tiền sử dị ứng. Do đó, người mắc zona nên tránh các thực phẩm như cua, tôm, mực và những đồ uống có cồn, đồng thời bổ sung thực phẩm giàu chất xơ và nước để hỗ trợ quá trình hồi phục.",
-    "link": "https://vnexpress.net/mac-zona-than-kinh-co-can-kieng-hai-san-khong-4864735.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Mắc zona thần kinh có nên kiêng ăn hải sản không?",
-    "answers": [
-      {
-        "text": "Có, nên kiêng ăn hải sản để tránh kích ứng.",
-        "correct": true
-      },
-      {
-        "text": "Không, ăn hải sản sẽ không ảnh hưởng gì.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần ăn ít hải sản là được.",
-        "correct": false
-      },
-      {
-        "text": "Có thể ăn bình thường không sao.",
         "correct": false
       }
     ]
